--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Moazen</string>
+    <string name="app_name">تطبيق المسلم</string>
 
     <string name="islamic_society_of_north_america_isna">Islamic Society of North America (ISNA)</string>
     <string name="institute_of_geophysics_university_of_tehran">Institute of Geophysics, University of Tehran</string>
