--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,30 @@
     <string name="azan_asr">ASR</string>
     <string name="azan_maghreb">Maghreb</string>
     <string name="azan_eshaa">Eshaa`</string>
+    <string name="al_shoroq">Al Shoroq</string>
+
+
+    <string name="setting">Setting</string>
+    <string name="prayer_times">Prayer times</string>
+
+    <string name="alsalah">Alsalah</string>
+    <string name="times">Times</string>
+
+    <string name="allow">Allow</string>
+    <string name="edit">Edit</string>
+    <string name="close">Close</string>
+
+
+
+    <string name="you_must_permit_drawing_over_other_apps">You must permit drawing over other apps</string>
+    <string name="your_current_location_is">Your Current Location is</string>
+    <string name="cairo">Cairo</string>
+    <string name="your_selected_azan_times_calculation_type_is">Your selected Azan times calculation type is :</string>
+    <string name="till_next_prayer">Till next prayer</string>
+    <string name="space_"> </string>
+    <string name="colon_with_space"> : </string>
+
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="timezone">Timezone</string>
 </resources>
