--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -28,16 +28,22 @@
     <string name="allow">السماح للتطبيق</string>
     <string name="edit">تعديل</string>
     <string name="close">أغلاق</string>
+    <string name="open">فتح</string>
+    <string name="cancel">الغاء</string>
+
 
 
     <string name="you_must_permit_drawing_over_other_apps">لاستخدام التطبيق، يجب منحه خاصية الرسم فوق التطبيقات الاخري حتى يتمكن التطبيق من عرض الاشعارات</string>
     <string name="your_current_location_is">المكان الحالي هو </string>
-    <string name="cairo">القاهرة</string>
     <string name="your_selected_azan_times_calculation_type_is">طريقة حساب مواقع الصلاة :</string>
     <string name="till_next_prayer">المتبقي حتى الصلاة القادمة</string>
+    <string name="gps_is_not_enabled">عذرا نظام تحديد المواقع غير مفعل</string>
+
+
     <string name="space_"> </string>
     <string name="colon_with_space"> : </string>
 
+    <string name="cairo">القاهرة</string>
     <string name="latitude">خط العرض</string>
     <string name="longitude">خط الطول</string>
     <string name="timezone">الوحدة الزمنية</string>
