Update for API 29

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -47,5 +47,6 @@
     <string name="latitude">خط العرض</string>
     <string name="longitude">خط الطول</string>
     <string name="timezone">الوحدة الزمنية</string>
+    <string name="your_juristic_method">الطريقة الفقهية المختارة</string>
 
 </resources>
